Sync and docker initial setup fies added